modifico links, ajusto header en sass

--- a/pages/products.html
+++ b/pages/products.html
@@ -39,10 +39,10 @@
                       <a class="nav-link link-modificado" href="./about.html">Quienes somos</a>
                       </li>
                       <li class="nav-item">
-                      <a class="nav-link link-modificado" href="./productos.html">Productos</a>
+                      <a class="nav-link link-modificado" href="./products.html">Productos</a>
                       </li>
                       <li class="nav-item">
-                      <a class="nav-link link-modificado" href="./preguntas.html">Preguntas frecuentes</a>
+                      <a class="nav-link link-modificado" href="./questions.html">Preguntas frecuentes</a>
                       </li>
                       <li class="nav-item">
                       <a class="nav-link link-modificado" href="./contacto.html">Contacto</a>
