aplico sass al footer e index

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                    <a class="nav-link links" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link links" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link links" href="./pages/about.html">Quienes somos</a>
-                    <a class="nav-link links" href="./pages/productos.html">Productos</a>
-                    <a class="nav-link links" href="./pages/preguntas.html">Preguntas frecuentes</a>
-                    <a class="nav-link links" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link links" href="./pages/products.html">Productos</a>
+                    <a class="nav-link links" href="./pages/questions.html">Preguntas frecuentes</a>
+                    <a class="nav-link links" href="./pages/contact.html">Contacto</a>
               </div>
               
               </div>
@@ -161,9 +161,9 @@
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./pages/about.html">Quienes somos</a></li>
-                    <li><a href="./pages/productos.html">Productos</a></li>
-                    <li><a href="./pages/preguntas.html">Preguntas frecuentes</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="./pages/products.html">Productos</a></li>
+                    <li><a href="./pages/questions.html">Preguntas frecuentes</a></li>
+                    <li><a href="./pages/contact.html">Contacto</a></li>
                 </ul>
             </div>
 
