--- a/pages/products.html
+++ b/pages/products.html
@@ -45,7 +45,7 @@
                       <a class="nav-link link-modificado" href="./questions.html">Preguntas frecuentes</a>
                       </li>
                       <li class="nav-item">
-                      <a class="nav-link link-modificado" href="./contacto.html">Contacto</a>
+                      <a class="nav-link link-modificado" href="./contact.html">Contacto</a>
                       </li>
                   </ul>
               </nav>
