--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huellas de BARRO</title>
+    <title>Huellas de BARRO - Conoce nuestra historia</title>
     <link rel="shorcout icon" href="../img/icono.jpg">
+    <meta name="description" content="¡Sentite bienvenido/a en este espacio! Conocé un poco de la historia detrás de la creadora de Huella de Barro.">
+    <meta name="keywords" content="cerámica, arcilla, productos para el hogar, objetos de diseño, vajilla, jarrones, objetos útiles, hecho a mano, hecho con amor">
 
      <!-- Roboto -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,51 +27,44 @@
 <body>
     <!-- Barra de Navegación -->
     <header>
-        <div>
-        <h1 class="huellas">Huellas de BARRO</h1>
-        <div class="container col-md-12 col-xl-12">
-          <nav>
-              <ul class="nav justify-content-center">
-                  <li class="nav-item">
-                  <a class="nav-link active link-modificado" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link link-modificado" href="./about.html">Quienes somos</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link link-modificado" href="./productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link link-modificado" href="./preguntas.html">Preguntas frecuentes</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link link-modificado" href="./contacto.html">Contacto</a>
-                  </li>
-              </ul>
-          </nav>
-          </div>
-          </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
 
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="container-fluid alinear">
+          <div class="alineacion"><h1 class="huellas">Huellas de BARRO</h1></div>
+
+          <div class="alineacion">
+          <button class="navbar-toggler icono" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+              <a class="nav-link links" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link links" href="./about.html">Quienes somos</a>
+              <a class="nav-link links" href="./products.html">Productos</a>
+              <a class="nav-link links" href="./questions.html">Preguntas frecuentes</a>
+              <a class="nav-link links" href="./contact.html">Contacto</a>
+        </div>
+        
+        </div>
+        </div>
+        
+      </div>
+      </nav>
+
+          <div id="carouselExampleSlidesOnly" class="carousel slide horizontal" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../img/background-nav.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/background-nav1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/background-nav2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-item active">
+                <img src="../img/background-about.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+          </div>
+
+          <div id="carouselExampleSlidesOnly" class="carousel slide vertical" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../img/background-about-vertical.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
           </div>
     </header>
 
@@ -83,9 +78,21 @@
         </div>
     </section>
 
-      <!-- Footer -->
+    <section class="mas-sobre">
+      <div>
+      <p>Más sobre nuestros productos</p>
+      </div>
+      <div class="imagenes">
+          <img src="../img/galeria.jpg" alt="Imagen de un jarrón ovalado posicionado en una ventana.">
+          <img src="../img/galeria2.jpg" alt="Imagen de taller, en donde se visualizan piezas de producción sobre una mesa.">
+          <img src="../img/galeria1.jpg" alt="Imagen de dos jarrones amarrillos sobre una tela blanca, vista cenital.">
+          <img src="../img/galeria3.jpg" alt="Imagen de dos cuencos color negro sobre una base de madera y fondo blanco.">
+      </div>
+  </section>
 
-      <footer>
+     <!-- Footer -->
+
+     <footer>
         <section class="footer-section">
             <div class="footer__huellas">
                 <h3>Huellas en el Barro</h3>
@@ -94,27 +101,26 @@
                 <p>huellasdebarro@gmail.com</p>
             </div>
 
+            <div class="links">
             <div class="footer__info">
-                <h4>Información</h4>
                 <ul>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./about.html">Quienes somos</a></li>
-                    <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="./preguntas.html">Preguntas frecuentes</a></li>
-                    <li><a href="./pcontacto.html">Contacto</a></li>
+                    <li><a href="./products.html">Productos</a></li>
+                    <li><a href="./questions.html">Preguntas frecuentes</a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
                 </ul>
             </div>
 
             <div class="footer__redes">
-                <h4>Seguinos en nuestras redes</h4>
                 <div class="footer__redes-item">
-                    <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
-                    <a href="#">Instagram</a>
+                    <a href="#"><img src="../img/instagram.png" alt="imagen del logotipo de Instagram"></a>
                 </div>
 
                 <div class="footer__redes-item">
-                    <a href="#"><img src="../img/facebook.png" alt="instagram"></a>
-                    <a href="#">Facebook</a>
+                    <a href="#"><img src="../img/facebook.png" alt="imagen del logotipo de Facebook"></a>
                 </div>
+            </div>
             </div>
         </section>
     </footer>
