modifico link index

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <div class="boton">
-          <a href="./pages/productos.html" class="productos__boton">Ver productos</a>
+          <a href="./pages/products.html" class="productos__boton">Ver productos</a>
           </div>
       </section>
 
