ajusto links footer

--- a/pages/products.html
+++ b/pages/products.html
@@ -161,9 +161,9 @@
               <ul>
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="./about.html">Quienes somos</a></li>
-                  <li><a href="./productos.html">Productos</a></li>
-                  <li><a href="./preguntas.html">Preguntas frecuentes</a></li>
-                  <li><a href="./contacto.html">Contacto</a></li>
+                  <li><a href="./products.html">Productos</a></li>
+                  <li><a href="./questions.html">Preguntas frecuentes</a></li>
+                  <li><a href="./contact.html">Contacto</a></li>
               </ul>
           </div>
 
